--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
 <body>
     <div id="intro">
         <header>
-            <img src="/stf/img/name_logo.png" alt="Logo">
+            <img class="menu" src="/stf/menu.svg" alt="Menu">
+            <img class="name_logo" src="/stf/img/name_logo.png" alt="Logo">
             <ul>
                 <a href="#intro"><li>Home</li></a>
                 <a href="#features"><li>Features</li></a>
@@ -59,7 +60,7 @@
             <p>The answer, in my opinion, lies in technology—specifically, creating a real estate platform that simplifies the rental process. A well-designed website could provide users with real-time updates on available properties, detailed listings, and virtual tours, allowing them to explore potential homes without the need for constant back-and-forth travel. This would eliminate much of the stress and uncertainty that renters currently face, empowering them to make more informed decisions with greater ease and efficiency.</p>
             <p>By leveraging technology, we can bring transparency and convenience to the real estate market, making it easier for people to find the right home without the hassle. It’s a solution that can truly transform the way Nigerians approach renting.</p>
         </div>
-        <span onclick>--expand--</span>
+        <!-- <span onclick>--expand--</span> -->
 
         <br>
         <hr>
@@ -74,6 +75,6 @@
         </div>
     </div>
 
-    <script src="home.js"></script>
+    <script type="module" src="home.js"></script>
 </body>
 </html>
