project_landing_page update

--- a/home.html
+++ b/home.html
@@ -58,7 +58,11 @@
             <p>Having worked in the real estate industry for two years, I’ve gained valuable insight into how the market operates and the difficulties people face when searching for accommodation. I’ve seen how potential tenants struggle with the time-consuming task of viewing multiple properties with agents, only to travel long distances and discover that the home they’re interested in has already been rented to someone else. The frustration, disappointment, and inefficiency of this process are widespread, and there are countless stories of people enduring these same hardships.</p>
             <p>I’ve often thought about how the government could help alleviate the challenges of renting, but so far, no clear solution has come to mind. The reality is that, despite any potential reforms, the responsibility for finding a way to improve this situation falls on individuals and businesses. That’s where I believe I can make a difference.</p>
             <p>The answer, in my opinion, lies in technology—specifically, creating a real estate platform that simplifies the rental process. A well-designed website could provide users with real-time updates on available properties, detailed listings, and virtual tours, allowing them to explore potential homes without the need for constant back-and-forth travel. This would eliminate much of the stress and uncertainty that renters currently face, empowering them to make more informed decisions with greater ease and efficiency.</p>
-            <p>By leveraging technology, we can bring transparency and convenience to the real estate market, making it easier for people to find the right home without the hassle. It’s a solution that can truly transform the way Nigerians approach renting.</p>
+            <p>By leveraging technology, we can bring transparency and convenience to the real estate market, making it easier for people to find the right home without the hassle. It’s a solution that can truly transform the way Nigerians approach renting.
+                <br><br>
+                <strong style="margin: 0; padding: 0;">Abdulfatai Sheriff</strong><br>
+                <cite><a href="https://www.holbertonschool.com/" style="text-decoration: none; color: rgb(83, 83, 83);">Project for Holberton School</a></cite>
+            </p>
         </div>
         <!-- <span onclick>--expand--</span> -->
 
