project_landing_page update

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div id="intro">
         <header>
-            <img class="menu" src="/stf/menu.svg" alt="Menu">
-            <img class="name_logo" src="/stf/img/name_logo.png" alt="Logo">
+            <img class="menu" src="stf/menu.svg" alt="Menu">
+            <img class="name_logo" src="stf/img/name_logo.png" alt="Logo">
             <ul>
                 <a href="#intro"><li>Home</li></a>
                 <a href="#features"><li>Features</li></a>
                 <a href="#about"><li>About</li></a>
             </ul>
         </header>
-        <img src="/stf/img/intro_image.jpg" alt="Intro Image">
+        <img src="stf/img/intro_image.jpg" alt="Intro Image">
         <div class="project_name">
             <h1>REAL ESTATE</h1>
             <p>A window to easy and convinent housing</p>
@@ -70,9 +70,9 @@
         <hr>
         
         <div class="profile">
-            <a href="https://www.linkedin.com/in/abdulfataisheriff/"><img src="/stf/img/linkedin.png" alt="linkedin"></a>
-            <a href="https://github.com/hyperbayse"><img src="/stf/img/github.png" alt="github"></a>
-            <a href="https://x.com/absherif102"><img src="/stf/img/x.png" alt="twitter"></a>
+            <a href="https://www.linkedin.com/in/abdulfataisheriff/"><img src="stf/img/linkedin.png" alt="linkedin"></a>
+            <a href="https://github.com/hyperbayse"><img src="stf/img/github.png" alt="github"></a>
+            <a href="https://x.com/absherif102"><img src="stf/img/x.png" alt="twitter"></a>
             
             <br>
             <a class="repo_link" href="https://github.com/hyperbayse/real_estate">Project Repository</a>
