--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <a href="#about"><li>About</li></a>
             </ul>
         </header>
-        <img src="stf/img/intro_image.jpg" alt="Intro Image">
+        <img class="iimage" src="stf/img/intro_image.jpg" alt="Intro Image">
         <div class="project_name">
             <h1>REAL ESTATE</h1>
             <p>A window to easy and convinent housing</p>
-            <button onclick="window.location.href='https://github.com/hyperbayse/real_estate'">Project</button>
+            <button type="button" onclick="window.location.href='https://github.com/hyperbayse/real_estate'">Project</button>
         </div>       
     </div> 
 
@@ -35,11 +35,11 @@
             </div>
         </div> 
         <div class="feature">
+            <img src="stf/img/feature2.jpg" alt="feature2">
             <div class="desc">
                 <h3>Verified Agents</h3>
                 <p>Reduce your susceptibility to con artists seeking victims to fool. Come and take advantage of our verified and qualified agents' services.</p>
             </div>
-            <img src="stf/img/feature2.jpg" alt="feature2">
         </div> 
         <div class="feature">
             <img src="stf/img/feature3.jpg" alt="feature3">
@@ -67,9 +67,18 @@
         </div>
         <!-- <span onclick>--expand--</span> -->
 
-        <br>
+        <br/>
+
+
+        <video width="400px" height="auto" controls>
+            <source src="stf/vid/project_landing_page.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+        <br/>
+        <br/>
         <hr>
-        
+    
         <div class="profile">
             <a href="https://www.linkedin.com/in/abdulfataisheriff/"><img src="stf/img/linkedin.png" alt="linkedin"></a>
             <a href="https://github.com/hyperbayse"><img src="stf/img/github.png" alt="github"></a>
